@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shortcuts>
     <shortcut>
-        <label>20386</label>
+        <label>$LOCALIZE[31173]</label>
         <label2>32014</label2>
         <icon>DefaultRecentlyAddedMovies.png</icon>
         <thumb />
