@@ -3,6 +3,7 @@ Development moves to Leia only
 Fix Kodi Requires version
 Fix Leia Icon
 Disable "Press Up to View Fanart Setting" by default (Enable in Skin Settings)
+Enable Category widget big icons / text by defaul
 
 [B]0.9.32[/B]
 ARTWORK - Add generated artwork for missing artist/album artwork.
